--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,19 @@
-name: Build and push `gpt4free` docker image
+name: Sync with HuggingFace Hub
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up qemu
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to docker hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/gpt4free:latest
+    - name: Sync with HuggingFace
+      uses: nateraw/huggingface-sync-action@v0.0.4
+      with:
+        github_repo_id: leeeawa/gpt4free
+        huggingface_repo_id: ileee/gpt4free
+        repo_type: space
+        space_sdk: docker
+        hf_token: ${{ secrets.HF_TOKEN }}
