--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       uses: nateraw/huggingface-sync-action@v0.0.4
       with:
         github_repo_id: leeeawa/gpt4free
-        huggingface_repo_id: ileee/gpt4free
+        huggingface_repo_id: ileee/g4f
         repo_type: space
         space_sdk: docker
         hf_token: ${{ secrets.HF_TOKEN }}
